--- a/IsEmirleri.Web/Views/Mission/Board.cshtml
+++ b/IsEmirleri.Web/Views/Mission/Board.cshtml
@@ -198,7 +198,80 @@
             </div>
         </div>
     </div>
+    <div class="modal fade" id="modalDetail" tabindex="-1" aria-labelledby="taskModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-lg">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="taskModalLabel"></h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <div class="row">
+                        <div class="col-lg-8 left-panel">
+                            <p><i class="bi bi-link"></i> İlişkili: <a href="/project/index" id="project"></a></p>
+                            <button class="btn btn-primary" id="start-timer"><i class="bi bi-play-circle"></i> Süre Başlat</button>
+                            <div class="mt-3">
+                                <h6>
+                                    <i class="uil-info-circle"></i> Açıklama
+                                    <i class="uil-comment-alt-edit ms-2" title="Düzenle" id="edit-description"></i>
+                                </h6>
+                                <div id="description-container">
+                                    <p id="description"></p>
+                                </div>
+                                <div id="edit-description-container" style="display: none;">
+                                    <textarea class="form-control" id="edit-description-text" placeholder="Açıklamayı buraya yazın..."></textarea>
+                                    <button type="button" id="save-description" class="btn btn-primary btn-sm">Kaydet</button>
+                                    <button type="button" id="close-description" class="btn btn-danger btn-sm">Kapat</button>
+                                </div>
+                            </div>
+                            <div class="mt-3">
+                                <h6><i class="bx bx-chat"></i> Yorumlar</h6>
+                                <p id="comments"></p>
+                                <textarea class="form-control" id="newComment" placeholder="Yorum Yazınız" required></textarea>
+                                <div class="card border border-primary">
+                                </div>
+                                <div class="text-end">
+                                    <button class="btn btn-primary btn-sm " id="btnAddComment">Yorum Ekle</button>
+                                </div>
 
+                            </div>
+                        </div>
+                        <div class="col-lg-4 right-panel">
+                            <div class="border-start ps-3">
+                                <h6><i class="bi bi-info-square"></i> Görev Bilgisi</h6>
+                                <p id="created-date">
+                                    Oluşturuldu:
+                                </p>
+                                <p class="uil-clipboard-notes" id="statuss"> Durum</p>
+                                <p class="uil-calendar-alt" id="start-date"> Başlangıç Tarihi: </p>
+                                <p class="uil-calendar-slash" id="end-date">
+                                    Bitiş Tarihi:
+                                </p>
+                                <p class="mdi mdi-priority-high" id="priority">Öncelik: </p>
+                                <p class="mdi mdi-timer-outline" id="logged-time">
+                                    Girilen Süre:
+                                </p>
+                                <p class="mdi mdi-timer-off-outline" id="total-time">
+                                    Girilen Toplam Süre:
+                                </p>
+                                <p id="emailNotification">
+                                    <i class="uil-fast-mail"></i> E-posta Bildirimi: <span id="emailNotificationIcon"></span>
+                                </p>
+                                <p id="smsNotification">
+                                    <i class="uil-calling"></i> SMS Bildirimi: <span id="smsNotificationIcon"></span>
+                                </p>
+
+                                <h6>
+                                    <i class="uil-users-alt"></i> Atanan Üyeler
+                                </h6>
+                                <p id="assigned-users"></p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
   
     @section Scripts {
 
@@ -375,7 +448,7 @@
 
                             $("#tasks-" + item.statusId).append(`
                                                 <div class="col-sm-12">
-                                                    <div class="card card-clickable" id="task-${item.id}" draggable="true" ondragstart="drag(event)" style="cursor: pointer; transition: background-color 0.3s, box-shadow 0.3s;">
+                                                                            <div class="card card-clickable" id="task-${item.id}" draggable="true" ondragstart="drag(event)" style="cursor: pointer; transition: background-color 0.3s, box-shadow 0.3s;" onclick="showMissionDetails(${item.id})">
                                                         <div class="card-body">
                                                             <div class="d-flex align-items-start justify-content-between">
                                                                 <h5 class="card-title">#${item.id} ${item.title}</h5>
@@ -389,9 +462,12 @@
                                                 </div>
                                             `);
                         }
+
+
                     }
                 });
             }
+          
             function drag(ev) {
                 ev.dataTransfer.setData("text", ev.target.id);
             }
@@ -497,7 +573,202 @@
                     }
                 });
             }
+            showMissionDetails = function (missionId, button) {
+                $("#edit-description").off("click");
+                $("#save-description").off("click");
+                $("#close-description").off("click");
+                $.ajax({
+                    url: `/Mission/GetById/${missionId}`,
+                    type: 'POST',
+                    data: { id: missionId },
+                    success: function (res) {
 
+                        $("#modalDetail").modal("show");
+                        $("#taskModalLabel").text(res.title);
+                        $("#statuss").text(`Durum: ${res.statusName}`);
+                        $("#description").text(res.description);
+                        $("#project").text(`#${res.projectId} - ${res.projectName}`);
+                        $("#created-date").text(`Oluşturuldu: ${formatDate(res.dateCreated)}`);
+                        $("#end-date").text(`Bitiş Tarihi: ${formatDate(res.endDate)}`);
+                        $("#start-date").text(res.startDate ? `Başlangıç Tarihi: ${formatDate(res.startDate)}` : 'Başlangıç Tarihi: Başlamadı');
+                        $("#priority").text(`Öncelik: ${res.priorityName}`);
+                       
+                        //$("#logged-time").text(`Girilen Süre: ${formatDuration(res.loggedTime)}`);
+                        //$("#total-time").text(`Girilen Toplam Süre: ${formatDuration(res.totalTime)}`);
+                        let assigneesText = "";
+                        if (res.assigneeEmails && res.assigneeEmails.length > 0) {
+                            for (var email of res.assigneeEmails) {
+                                assigneesText += email + "<br/>";
+                            }
+                        } else {
+                            assigneesText = "Atanan üye yok";
+                        }
+                        $("#assigned-users").html(assigneesText); // .text yerine .html kullanıldı
+                        $("#emailNotificationIcon").html(res.emailNotification ? '<i class="uil-check text-success"></i>' : '<i class="uil-times text-danger"></i>');
+                        $("#smsNotificationIcon").html(res.smsNotification ? '<i class="class=uil-check text-success"></i>' : '<i class="uil-times text-danger"></i>');
+                        let commentsText = "";
+                        if (res.comments && res.comments.length > 0) {
+                            for (var comment of res.comments) {
+                                commentsText += `
+                                                <div class="mt-4">
+                                                   <div>
+                                                      <p class="float-sm-end text-muted font-size-13">${formatCommentDate(comment.dateCreated)}</p>
+                                                   </div>
+                                                <div class="border p-4 rounded">
+                                                  <div class="border-bottom pb-3">
+                                                    <p class="text-muted mb-4 font-size-15 comment-description">${comment.description}</p>
+                                                    <div class="d-flex align-items-start">
+                                                      <div class="flex-grow-1 d-flex justify-content-between">
+                                                        <h5 class="font-size-13 mb-0">${comment.user.email}</h5>
+                                                        <div class="text-end">
+                                                          <button onclick="addCommentParent(${comment.id}, this)" class="btn btn-sm">Yanıtla</button>
+                                                        </div>
+                                                      </div>
+                                                    </div>
+                                                   </div>
+                                                  </div>
+                                                  </div>
+                                                  <style>
+                                                        .comment-description {
+                                                  word-break: break-word;
+                                                  overflow-wrap: break-word;
+                                                  white-space: pre-wrap;
+                                                  }
+                                                  </style>
+                                        `;
+                            }
+                        } else {
+                            commentsText = "<p>Henüz yorum yapılmamış.</p>";
+                        }
+                        $("#comments").html(commentsText);
+                     
+                        $("#modalDetail").data('missionId', missionId);
+                    },
+                    error: function (err) {
+                        console.error("Görev detayları yüklenirken hata oluştu:", err);
+                    }
+                });
+                $("#edit-description").click(function () {
+                    $("#description-container").hide();
+                    $("#edit-description-container").show();
+                    $("#edit-description-text").val($("#description").text().trim());
+                });
+
+                $("#save-description").click(function () {
+                    const updatedDescription = $("#edit-description-text").val().trim();
+                    if (updatedDescription === "") {
+                        toastr.error('Açıklama boş olamaz. Lütfen bir açıklama girin.');
+                        return; // İşlem yapılmadan çıkış yap
+                    }
+                    $.ajax({
+                        url: `/Mission/UpdateDescription/${missionId}`,
+                        type: 'POST',
+                        data: { missionId: missionId, description: updatedDescription },
+                        success: function (res) {
+                            if (res.success) {
+                                $("#description").text(updatedDescription);
+                                $("#edit-description-container").hide();
+                                $("#description-container").show();
+                                toastr.success('Açıklama başarıyla güncellendi.');
+
+                            } else {
+                                toastr.error('Açıklama güncellenirken hata oluştu: ' + res.message);
+                            }
+                        },
+                        error: function (err) {
+                            toastr.error('Açıklama güncellenirken bir hata oluştu.', err);
+                        }
+                    });
+                });
+                $("#close-description").click(function () {
+                    $("#edit-description-container").hide();
+                    $("#description-container").show();
+                });
+                $("#btnAddComment").off().click(function () {
+                    // let missionId = $("#modalDetail").data('missionId');
+                    let comment = {
+                        description: $("#newComment").val(),
+                        taskId: missionId,
+                    }
+                    if ($("#newComment").val().length > 0) {
+                        $.ajax({
+                            url: '/Comment/Add',
+                            type: 'POST',
+                            contentType: 'application/json',
+                            dataType: 'json',
+                            data: JSON.stringify(comment),
+                            success: function (res) {
+                                $("#newComment").val("");
+                                let commentsText = "";
+                                for (var comment of res.comments) {
+                                    commentsText += `
+                                                           <div class="mt-4">
+                                                             <div>
+                                                                <p class="float-sm-end text-muted font-size-13">${formatCommentDate(comment.dateCreated)}</p>
+                                                             </div>
+                                                                <div class="border p-4 rounded">
+                                                                  <div class="border-bottom pb-3">
+                                                                    <p class="text-muted mb-4 font-size-15 comment-description">${comment.description}</p>
+                                                                      <div class="d-flex align-items-start">
+                                                                        <div class="flex-grow-1 d-flex justify-content-between">
+                                                                          <h5 class="font-size-13 mb-0">${comment.user.email}</h5>
+                                                                          <div class="text-end">
+                                                                           <button onclick="addCommentParent(${comment.id}, this)" class="btn btn-sm">Yanıtla</button>
+                                                                          </div>
+                                                                        </div>
+                                                                      </div>
+                                                                  </div>
+                                                               </div>
+                                                            </div>
+                                                            <style>
+                                                                .comment-description {
+                                                            word-break: break-word;
+                                                            overflow-wrap: break-word;
+                                                            white-space: pre-wrap;
+                                                            }
+                                                            </style>
+                                                            `;
+                                }
+                                $("#comments").html(commentsText);
+
+                            },
+                            error: function (err) {
+                                console.error("Yorum eklenirken hata oluştu:", err);
+                            }
+                        });
+                    } else {
+                        toastr.error("Lütfen yorum yazınız.")
+                    }
+
+                });
+            };
+
+            //tarih
+            function formatDate(dateString) {
+                if (!dateString) return "";
+                let date = new Date(dateString);
+                return date.toLocaleString('tr-TR', {
+                    day: '2-digit',
+                    month: '2-digit',
+                    year: 'numeric',
+                    hour: '2-digit',
+                    minute: '2-digit',
+                    second: '2-digit'
+                });
+            }
+            //saatisz
+            // function formatDate(dateString) {
+            //     if (!dateString) return "";
+            //     let date = new Date(dateString);
+            //     return date.toLocaleDateString();
+            // }
+
+
+            //sonra bakılcak
+            // function formatDuration(duration) {
+            //     return duration; // Uygun formatlama ekleyin
+            // }
+          
         </script>
     }
 </body>
