--- a/IsEmirleri.Web/Views/Customer/Index.cshtml
+++ b/IsEmirleri.Web/Views/Customer/Index.cshtml
@@ -1,16 +1,21 @@
 ﻿﻿<div class="row">
     <div class="col-12">
         <div class="card">
-            <div class="card-header bg-soft-success text-dark text-center d-flex">
-                <div class="col-10 text-center fs-3 text-dark"><i class="bx bxs-business"></i>Şirketler</div>
-                <div class="col-2 fs-3">
-                    <button id="btnAdd" class="btn btn-success"><i class="uil uil-plus me-2"></i>Yeni Kayıt</button>
+            <div class="card-header bg-soft-success text-dark d-flex align-items-center justify-content-between">
+                <div class="flex-grow-1 text-center fs-3 text-dark">
+                    <i class="bx bxs-business"></i>Şirketler
+                </div>
+                <div class="text-end">
+                    <button id="btnAdd" class="btn btn-success">
+                        <i class="uil uil-plus me-2"></i>Yeni Kayıt
+                    </button>
                 </div>
             </div>
             <div class="card-body">
                 <table id="tblCustomer" class="table table-bordered table-striped table-hover"></table>
             </div>
         </div>
+
     </div>
 </div>
 
