--- a/IsEmirleri.Web/Views/Customer/Users.cshtml
+++ b/IsEmirleri.Web/Views/Customer/Users.cshtml
@@ -3,12 +3,14 @@
 <div class="row">
     <div class="col-12">
         <div class="card">
-            <div class="card-header bg-soft-success text-dark text-center d-flex">
-                <div class="col-10 text-center fs-3 text-dark">
+            <div class="card-header bg-soft-success text-dark d-flex align-items-center justify-content-between">
+                <div class="flex-grow-1 text-center fs-3 text-dark">
                     <i class="uil-chat-bubble-user"></i>Kullanıcı Listesi
                 </div>
-                <div class="col-2 fs-3">
-                    <button id="btnAdd" class="btn btn-success"><i class="uil uil-plus me-2"></i>Yeni Kayıt</button>
+                <div class="text-end">
+                    <button id="btnAdd" class="btn btn-success">
+                        <i class="uil uil-plus me-2"></i>Yeni Kayıt
+                    </button>
                 </div>
             </div>
             <div class="card-body">
@@ -16,6 +18,7 @@
                 </table>
             </div>
         </div>
+
     </div>
 </div>
 <div class="modal fade" id="modalAdd" tabindex="-1" data-bs-backdrop="static" data-bs-keyboard="false" role="dialog" aria-labelledby="modalTitleId" aria-hidden="true">
