--- a/IsEmirleri.Web/Views/Priority/Index.cshtml
+++ b/IsEmirleri.Web/Views/Priority/Index.cshtml
@@ -1,18 +1,21 @@
 ﻿
 
 <div class="card">
-    <div class="card-header bg-soft-success text-dark text-center d-flex">
-
-        <div class="col-11 text-center fs-3 text-dark">Öncelik Listesi</div>
-        <div class="col-1 fs-3">
-            <a href="#" id="btnAdd" class="btn btn-success"><i class="uil uil-plus me-2"></i>Yeni Kayıt</a>
+    <div class="card-header bg-soft-success text-dark d-flex align-items-center justify-content-between">
+        <div class="flex-grow-1 text-center fs-3 text-dark">
+            <i class="fas fa-clipboard-list me-2"></i>Öncelik Listesi
         </div>
-
+        <div class="text-end">
+            <a href="#" id="btnAdd" class="btn btn-success">
+                <i class="uil uil-plus me-2"></i>Yeni Kayıt
+            </a>
+        </div>
     </div>
     <div class="card-body">
         <table id="tblPriority" class="table table-bordered table-striped table-hover"></table>
     </div>
 </div>
+
 
 
 
