--- a/IsEmirleri.Web/Views/Project/Index.cshtml
+++ b/IsEmirleri.Web/Views/Project/Index.cshtml
@@ -1,21 +1,22 @@
 ﻿<div class="row">
     <div class="col-12">
         <div class="card">
-
-            <div class="card-header bg-soft-success text-dark text-center d-flex">
-               
-                <div class="col-10 text-center fs-3 text-dark"><i class="fas fa-project-diagram"></i>Projeler</div>
-                <div class="col-2 fs-3">
-                    <a href="#" id="btnAdd" class="btn btn-success"><i class="uil uil-plus me-2"></i>Yeni Kayıt</a>
-
+            <div class="card-header bg-soft-success text-dark d-flex align-items-center justify-content-between">
+                <div class="flex-grow-1 text-center fs-3 text-dark">
+                    <i class="fas fa-project-diagram"></i>Projeler
+                </div>
+                <div class="text-end">
+                    <a href="#" id="btnAdd" class="btn btn-success">
+                        <i class="uil uil-plus me-2"></i>Yeni Kayıt
+                    </a>
                 </div>
             </div>
 
-           
             <div class="card-body">
                 <table id="tblProject" class="table table-bordered table-striped table-hover"></table>
             </div>
         </div>
+
     </div>
 </div>
 @* <div class="modal fade" id="modalEkle" tabindex="-1" data-bs-backdrop="static" data-bs-keyboard="false" role="dialog" aria-labelledby="modalTitleId" aria-hidden="true">
