--- a/IsEmirleri.Web/Views/Mission/Board.cshtml
+++ b/IsEmirleri.Web/Views/Mission/Board.cshtml
@@ -824,7 +824,7 @@
 
                 function startTimer(missionId) {
                     if (timers[missionId]) {
-                        clearInterval(timers[missionId]); // Eski timer'ı durdur
+                        clearInterval(timers[missionId]); 
                     }
 
                     let elapsedTime = 0;
