--- a/IsEmirleri.Web/Views/Mission/Index.cshtml
+++ b/IsEmirleri.Web/Views/Mission/Index.cshtml
@@ -392,7 +392,7 @@
 
             function startTimer(missionId) {
                 if (timers[missionId]) {
-                    clearInterval(timers[missionId]); // Eski timer'ı durdur
+                    clearInterval(timers[missionId]); 
                 }
 
                 let elapsedTime = 0;
