uyarı mekanizmaları güncellendi

--- a/IsEmirleri.Web/Views/Mission/Board.cshtml
+++ b/IsEmirleri.Web/Views/Mission/Board.cshtml
@@ -260,6 +260,7 @@
                                     Oluşturuldu:
                                 </p>
                                 <p class="uil-clipboard-notes" id="statuss"> Durum</p>
+                                <p id="completed-status"> Görev Bitti mi?: </p>
                                 <p class="uil-calendar-alt" id="start-date"> Başlangıç Tarihi: </p>
                                 <p class="uil-calendar-slash" id="end-date">
                                     Bitiş Tarihi:
