--- a/IsEmirleri.Web/Views/User/Index.cshtml
+++ b/IsEmirleri.Web/Views/User/Index.cshtml
@@ -53,7 +53,15 @@
                     dataSrc: 'data'
                 },
                 columns: [
+                     
                     { data: 'id', title: 'Sıra No' },
+                    {
+                        data: 'picture', title: 'Fotoğraf', render: function (data) {
+                            return data ? `<img src="/Files/UserPhotos/${data}" style="width:50px; height:50px; border-radius:50%" />`
+                                : `<div class="rounded-circle header-profile-user" style="width:50px; height:50px; background-color:#ccc; display:flex; align-items:center; justify-content:center;">
+                                 <i class="fa fa-user" style="color:#fff;"></i> </div>`;
+                        }
+                    },
                     { data: 'email', title: 'Kullanıcı Maili' },
                     { data: 'password', title: 'Kullanıcı Şifre' },
                     { data: 'customerId', title: 'Customer Id' },
